--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
-    font-family: 'Arial', sans-serif;
-    background: #2c3e50;
-    color: #ecf0f1;
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(45deg, #4caf50, #2e7d32);
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,19 +12,20 @@ body {
 }
 
 .container {
-    background: #1abc9c;
+    background: rgba(0, 0, 0, 0.8);
     padding: 20px 30px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    max-width: 600px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    max-width: 700px;
     width: 100%;
     text-align: center;
 }
 
 h1 {
     margin-bottom: 20px;
-    color: #ecf0f1;
+    color: #fff;
     font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-size: 36px;
 }
 
 .input-group {
@@ -33,20 +36,21 @@ h1 {
 .input-group input {
     flex: 1;
     padding: 10px;
-    border: 2px solid #16a085;
+    border: none;
     border-radius: 5px 0 0 5px;
     font-size: 16px;
-    background-color: #ecf0f1;
+    background-color: #fff;
     color: #2c3e50;
 }
 
 .input-group button {
     padding: 10px 20px;
-    border: 2px solid #16a085;
+    border: none;
     background: #27ae60;
-    color: #ecf0f1;
+    color: #fff;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
+    font-size: 16px;
 }
 
 .input-group button:hover {
@@ -58,44 +62,52 @@ h1 {
 }
 
 .link-item {
-    background: #34495e;
+    background: rgba(255, 255, 255, 0.1);
     padding: 20px;
-    border: 1px solid #2c3e50;
+    border: 1px solid #27ae60;
     border-radius: 10px;
     margin-bottom: 20px;
     text-align: left;
-    color: #ecf0f1;
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+
+.link-item .link-image {
+    margin-right: 20px;
+}
+
+.link-item .link-image img {
+    max-width: 100px;
+    border-radius: 10px;
+}
+
+.link-item .link-details {
+    flex: 1;
 }
 
 .link-item h2 {
     margin: 0 0 10px;
-    font-size: 18px;
-}
-
-.link-item img {
-    max-width: 100px;
-    float: left;
-    margin-right: 20px;
-    border-radius: 5px;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .link-item p {
-    font-size: 14px;
+    font-size: 16px;
     margin: 0 0 10px;
 }
 
 .link-item a {
     display: inline-block;
     margin-top: 10px;
-    padding: 8px 12px;
-    border: 1px solid #27ae60;
-    color: #27ae60;
+    padding: 10px 20px;
+    background: #27ae60;
+    color: #fff;
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s, color 0.3s;
 }
 
 .link-item a:hover {
-    background: #27ae60;
-    color: #ecf0f1;
+    background: #2ecc71;
 }
